# news-assistant

./: .gitignore  Contest.ipynb  Dockerfile  NewsScript.MD  README.md  pyproject.toml  server.py  webpage
app/: __init__.py  main.py  server.py  text_to_speech.py
