[tool.poetry]
name = "news-assistant"
version = "0.1.0"
description = ""
authors = ["Aleksandr Bobrov <al.bobrov.mail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.352"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
